2008-10-19 Jim Garlick <garlick@llnl.gov>

	* src/getconf.[ch] : Redo interface.  Handle comments properly.

	* test/tconf.c, test/13.sh, test/13.exp, test/14.sh, test/14.exp : 
	Tests for above.

	* src/quota.c src/repquota.c : Use new configuration interface.

2008-06-03 Jim Garlick <garlick@llnl.gov>

	* : tag 2.1

	* htdocs/index.html : Add SF logo per policy.

2008-05-30 Jim Garlick <garlick@llnl.gov>

	* rquota.spec : Set --program-prefix to prevent AIX from adding one.

	* src/listint.c : Silence warning on AIX.

2008-05-23 Jim Garlick <garlick@llnl.gov>

	* : tag 2.0

2008-05-22 Jim Garlick <garlick@llnl.gov>

	* src/repquota.c, src/quota.c : Tidy up longopt handling.
	
2008-05-20 Jim Garlick <garlick@llnl.gov>

	* src/repquota.c : Fix error an error message.

	* src/repquota.1 : Fix option descriptions.

2008-05-20 Jim Garlick <garlick@llnl.gov>

	* : tag 1.10

	* src/* : Main source moved here.

	* test/* : Test infrastructure created here with some initial tests.

	* getquota.c : Add some test hooks.

	* quota.spec.in : Use install target.

	* src/Makefile.am : Add man pages to man_MANS. 

	* src/listint.[ch] : Simple list-of-ints handling functions.

	* src/repquota.c : Change --min-uid, --max-uid option to --uid-range.
	Swap -u and -U.

2008-05-19 Jim Garlick <garlick@llnl.gov>

	* getquota.[ch], quota.c : If not in -v mode and warnings are
	issued, notify user to run -v to get more info.

	* quota.c : Add getopt_long() support.

2008-05-13 Jim Garlick <garlick@llnl.gov>

	* config/*, Makefile.in, configure, INSTALL : 
	Checked in bootstrap products.

2008-05-12 Jim Garlick <garlick@llnl.gov>

	* : Integrated with automake/autoconf.

2008-05-07 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Factor common code from repquota.c and quota.c.
	Add test hooks.

	* quota.c : Use a List to manage quota results like repquota.
	Allow unqualified uid's to be passed in for testing.
	
2008-05-06 Jim Garlick <garlick@llnl.gov>
